k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campusconnect-service
  namespace: campusconnect
  labels:
    app.kubernetes.io/name: campusconnect-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: campusconnect-api
